--- a/index.html
+++ b/index.html
@@ -64,18 +64,10 @@
                 <div id="aktuell">
 
                     <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> N&#228;chste Veranstaltung</h4>
-                    <div class="c2"><h4>24. Februar 2019 - Generalversammlung in Nospelt</h4>
+                    <div class="c2"><h4>22. April 2019 - Emaischen in Nospelt</h4>
                         <!--<p class="cal">Einladung <a href="dokumente/2019.AG.Vortrag.jpg">PDF</a></p>--></div>
-                    <div><a href="dokumente/2018.10_po.pdf"><img src="fotos/2019.AG.Vortrag.jpg"></a></div>
+                    <div><a href="dokumente/2019.Emaischen.pdf"><img src="fotos/2019.Emaischen.jpg"></a></div>
 
-
-                    <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> 20. August 2018: Hoher Besuch bei den GKA
-                    </h4>
-                    <div><a href="dokumente/2018.8.20_ph.pdf"><img src="fotos/2018.8.20_ph.png" alt="ph"></a></div>
-
-                    <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> 2. April 2018: Einweihung der Veranda im
-                        Ausgriewermusee</h4>
-                    <div><img src="fotos/2018.4.29 veranda.png" alt="veranda"></div>
 
 <!--                    <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> 26. Oktober 2017: Gallorömischer Gutshof
                         Goeblingen-Miecher </h4>
@@ -151,8 +143,6 @@
                 </div>
                 <div id="calendar">
                     <ul class="calendar">
-                        <li>24/02/2019 <br><em>Generalversammlung in Nospelt</em></li>
-                        <br>
                         <li>22/04/2019 <br><em>Emaischen</em></li>
                     </ul>
                     <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
