--- a/kalender.html
+++ b/kalender.html
@@ -30,10 +30,10 @@
   <div id="body"><div><h3 class="c1">Veranstaltungskalender</h3>
 <p>Hier finden Sie alle derzeit geplanten Veranstaltungen die von uns organisiert werden oder an welchen wir teilnehmen.</p>
 <div class="title">N&#228;chste Veranstaltung</div>
-      <div class="cal"><h4>24/02/2019 - Generalversammlung in Nospelt</h4>
+      <div class="cal"><h4>22/04/2019 - Emaischen in Nospelt</h4>
           <!-- <p class="cal"><a href="camp.html">Mehr dazu</a></p>-->
       </div>
-<div class="title">Kompletter Kalender</div><div class="body1">
+<div class="title">Veranstaltungskalender 2019</div><div class="body1">
   <ul class="c2">
       <li>24/02/2019 - Generalversammlung in Nospelt</li>
       <li>22/04/2019 - Emaischen</li>
@@ -58,7 +58,6 @@
   </div>
    <div id="calendar">
      <ul class="calendar">
-         <li>24/02/2019  <br><em>Generalversammlung in Nospelt</em></li><br>
          <li>22/04/2019  <br><em>Emaischen</em></li>
      </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
