--- a/index.html
+++ b/index.html
@@ -68,14 +68,10 @@
                         <!--<p class="cal">Einladung <a href="dokumente/2019.AG.Vortrag.jpg">PDF</a></p>--></div>
                     <div><a href="dokumente/2019.Emaischen.pdf"><img src="fotos/2019.Emaischen.jpg"></a></div>
 
-
-<!--                    <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> 26. Oktober 2017: Gallorömischer Gutshof
-                        Goeblingen-Miecher </h4>
-                    <div><img src="fotos/2017_miecher_konsolidierung.png" alt="miecher konsolidierung"></div>
-                    <div class="c2"><p>Im Auftrag des CNRA hat ein Unternehmer begonnen die Grundmauern von Gebäude 6 zu
-                        festigen.<br><em>...</em></p></div>
-                    <div class="c2"><p><a href="dokumente/2017_miecher_konsolidierung.pdf">weiterlesen</a></p></div>
-
+                    <br>
+                   <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> 12. März 2019: GKA leisteten 5 500 Stunden Freiwilligenarbeit (Luxemburger Wort) </h4>
+                    <div><a href="fotos/2019.3.12.lw.png"><img src="fotos/2019.3.12.lw_small.png" alt="artikel lw"></a></div>
+<!-- 
                     <br>
                     <hr>
 
