--- a/publikationen.html
+++ b/publikationen.html
@@ -57,7 +57,8 @@
   </div>
    <div id="calendar">
        <ul class="calendar">
-           <li>22/04/2019  <br><em>Emaischen</em></li>
+                                  <li>15/09/2019 <br>Tag der offenen Tür Villa Goeblingen/Miecher</li>
+                        <li>20/10/2019 <br>Tag der offenen Tür im Ausgriewermusée</li>
        </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
   </div>
