--- a/camp.html
+++ b/camp.html
@@ -74,7 +74,8 @@ Geschlafen wird in Zelten im Wald <em>Miecher</em> nahe Goeblange, in dem sich a
   </div>
    <div id="calendar">
        <ul class="calendar">
-           <li>22/04/2019  <br><em>Emaischen</em></li>
+                                  <li>15/09/2019 <br>Tag der offenen Tür Villa Goeblingen/Miecher</li>
+                        <li>20/10/2019 <br>Tag der offenen Tür im Ausgriewermusée</li>
        </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
   </div>
