--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
                 <div id="aktuell">
 
                     <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> N&#228;chste Veranstaltung</h4>
-                    <div class="c2"><h4>22. April 2019 - Emaischen in Nospelt</h4>
-                        <!--<p class="cal">Einladung <a href="dokumente/2019.AG.Vortrag.jpg">PDF</a></p>--></div>
-                    <div><a href="dokumente/2019.Emaischen.pdf"><img src="fotos/2019.Emaischen.jpg"></a></div>
+                    <div class="c2"><h4>15. September 2019 - Tag der offenen Tür Villa Goeblingen/Miecher</h4></div>
+                        <!--<p class="cal">Einladung <a href="dokumente/2019.AG.Vortrag.jpg">PDF</a></p></div>
+                    <div><a href="dokumente/2019.Emaischen.pdf"><img src="fotos/2019.Emaischen.jpg"></a></div>-->
+                    
+                    <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> 22. April 2019: 10.000er Besucher im <i>Ausgriewermusee</i> in Nospelt </h4>
+                    <div><a href="fotos/2019. 5_10.000_visiteur.jpg"><img src="fotos/2019. 5_10.000_visiteur.png" alt="artikel lw"></a></div>
 
                     <br>
                    <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> 12. März 2019: GKA leisteten 5 500 Stunden Freiwilligenarbeit (Luxemburger Wort) </h4>
@@ -139,7 +142,8 @@
                 </div>
                 <div id="calendar">
                     <ul class="calendar">
-                        <li>22/04/2019 <br><em>Emaischen</em></li>
+                        <li>15/09/2019 <br>Tag der offenen Tür Villa Goeblingen/Miecher</li>
+                        <li>20/10/2019 <br>Tag der offenen Tür im Ausgriewermusée</li>
                     </ul>
                     <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
                 </div>
