--- a/villa.html
+++ b/villa.html
@@ -58,7 +58,8 @@ Die hier im Wald aufgestellten Tafeln sollen Ihnen, liebe Besucher, die Lebensar
   </div>
    <div id="calendar">
        <ul class="calendar">
-           <li>22/04/2019  <br><em>Emaischen</em></li>
+                                  <li>15/09/2019 <br>Tag der offenen Tür Villa Goeblingen/Miecher</li>
+                        <li>20/10/2019 <br>Tag der offenen Tür im Ausgriewermusée</li>
        </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
   </div>
