--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div id="aktuell">
 
                     <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> N&#228;chste Veranstaltung</h4>
-                    <div class="c2"><h4>15. September 2019 - Tag der offenen Tür Villa Goeblingen/Miecher</h4></div>
+                    <div class="c2"><h4>15. September 2019 - Tag der offenen Tür Villa Goeblingen/Miecher</h4>
                         <p class="cal">Einladung <a href="dokumente/2019.09_po_villa.pdf">PDF</a></p></div>
                     <div><a href="dokumente/2019.09_po_villa.pdf"><img src="fotos/2019.09_po_villa.jpg"></a></div>
                     
