--- a/kalender.html
+++ b/kalender.html
@@ -30,7 +30,7 @@
   <div id="body"><div><h3 class="c1">Veranstaltungskalender</h3>
 <p>Hier finden Sie alle derzeit geplanten Veranstaltungen die von uns organisiert werden oder an welchen wir teilnehmen.</p>
 <div class="title">N&#228;chste Veranstaltung</div>
-      <div class="cal"><h4>15/09/2019 - <a href="camp.html">Tag der offenen Tür Villa Goeblingen/Miecher</a></h4>
+      <div class="cal"><h4>20/10/2019 - <a href="camp.html">Tag der offenen Tür im Ausgriewermusée</a></h4>
           <!-- <p class="cal"><a href="camp.html">Mehr dazu</a></p>-->
       </div>
 <div class="title">Veranstaltungskalender 2019</div><div class="body1">
@@ -58,7 +58,6 @@
   </div>
    <div id="calendar">
      <ul class="calendar">
-                                <li>15/09/2019 <br>Tag der offenen Tür Villa Goeblingen/Miecher</li>
                         <li>20/10/2019 <br>Tag der offenen Tür im Ausgriewermusée</li>
      </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
