--- a/museum.html
+++ b/museum.html
@@ -36,7 +36,7 @@
 <div class="break"></div>
 
   
-  <div class="title">Spezielle Veranstaltungen</div><div class="body1"><ul class="c2"><li>02/04/2018 - Tag der Offenen T&#252;r (Emaischen)</li><li>21/10/2018 - Tag der Offenen T&#252;r</li></ul></div>
+  <div class="title">Spezielle Veranstaltungen</div><div class="body1"><li>20/10/2019 - Tag der Offenen T&#252;r</li></ul></div>
   </div>
 <div id="top"><a href="#">nach oben</a></div>
  </div>
