--- a/camp.html
+++ b/camp.html
@@ -69,15 +69,15 @@ Geschlafen wird in Zelten im Wald <em>Miecher</em> nahe Goeblange, in dem sich a
 <!-- rechts -->
  <div id="right">
 <!-- hier beginnt news-block -->
-  <div id="calendar-title">
-  <div class="title">:: Kalender</div>
-  </div>
-   <div id="calendar">
-       <ul class="calendar">
-                        <li>20/10/2019 <br>Tag der offenen Tür im Ausgriewermusée</li>
-       </ul>
-   <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
-  </div>
+                <div id="calendar-title">
+                    <div class="title">:: Kalender</div>
+                </div>
+                <div id="calendar">
+                    <ul class="calendar">
+                        Programm 2020 erscheint demnächst.
+                    </ul>
+                    <!--<div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>-->
+                </div>
   
 <!-- hier beginnt member-block -->
 
