--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                 </div>
 
                 <div id="aktuell">
-
+                    <!--
                     <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> N&#228;chste Veranstaltung</h4>
                     <div class="c2"><h4>20. Oktober 2019 - Tag der offenen Tür im Ausgriewermusée</h4>
-                        <!--<p class="cal">Einladung <a href="dokumente/2019.09_po_villa.pdf">PDF</a></p></div>
-                    <div><a href="dokumente/2019.09_po_villa.pdf"><img src="fotos/2019.09_po_villa.jpg"></a>--></div>
+                        <p class="cal">Einladung <a href="dokumente/2019.09_po_villa.pdf">PDF</a></p></div>
+                    <div><a href="dokumente/2019.09_po_villa.pdf"><img src="fotos/2019.09_po_villa.jpg"></a></div>-->
                     
                     <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> 22. April 2019: 10.000er Besucher im <i>Ausgriewermusee</i> in Nospelt </h4>
                     <div><a href="fotos/2019. 5_10.000_visiteur.jpg"><img src="fotos/2019. 5_10.000_visiteur.png" alt="artikel lw"></a></div>
@@ -74,60 +74,6 @@
                     <br>
                    <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> 12. März 2019: GKA leisteten 5 500 Stunden Freiwilligenarbeit (Luxemburger Wort) </h4>
                     <div><a href="fotos/2019.3.12.lw.png"><img src="fotos/2019.3.12.lw_small.png" alt="artikel lw"></a></div>
-<!-- 
-                    <br>
-                    <hr>
-
-                    <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> 18. Oktober 2017: Gallorömische Villa von
-                        Goeblingen: Älteste Bierbrauerei in Luxemburg ausgegraben </h4>
-                    <div class="c2"><p>Bereits vor mehr als 1.700 Jahren brauten die Gallorömer bei Goeblingen
-                        (Luxemburg) Bier. Wieso gehen die Archäologen davon aus und wie lautete das antike
-                        Rezept?<br><em>...</em></p></div>
-                    <div class="c2"><p><a
-                            href="http://science.lu/de/content/gallor%C3%B6mische-villa-von-goeblingen-%C3%A4lteste-bierbrauerei-luxemburg-ausgegraben">mehr
-                        dazu auf science.lu</a></p></div>
-
-                    <br>
-                    <hr>
-
-                    <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> Oktober 2017: Besuchen Sie uns auf
-                        Facebook </h4>
-                    <div><a href="https://www.facebook.com/Altertumsfuerscher/"><img src="fotos/facebook_cover.png"
-                                                                                     alt="facebook"></a></div>
-
-                    <br>
-                    <hr>
-
-                    <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> 24. August 2017: Besuch von
-                        Staatssekretär Guy Arendt und Regierungsrat Gilles Lacour </h4>
-                    <div class="c2"><p>Staatssekretär Guy Arendt und Gilles Lacour, Regierungsrat im Kulturministerium
-                        besuchten das <em>Ausgriewermusée</em> in Nospelt und die Ausgrabungen in
-                        Goeblingen.<br><em>...</em></p></div>
-                    <div class="c2"><p><a href="dokumente/2017.9.2_Visite_Arendt.pdf">weiterlesen</a></p></div>
-
-                    <hr>
-
-                    <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> 5. - 19 August 2017: Niederländer
-                        unterstützen <em>D'Georges Kayser Altertumsfuerscher (GKA)</em></h4>
-                    <div class="c2"><p>Wer Anfang August "op Schéimerech" bei Kehlen vorbeigekommen ist, hat ein großes
-                        Zeltlager bemerkt. Der Verein <em>Philips van Horne</em> aus den Niederlanden hatte mit der
-                        Genehmigung des Umweltministeriums und der Gemeinde Kehlen seine Zelte hier aufgeschlagen. Etwa
-                        40 seiner Mitglieder unterstützten vom 5. bis 19. August <em>D'Georges Kayser Altertumsfuerscher
-                            (GKA)</em> bei den Ausgrabungen beim gallorömischen Gutshof von Goeblingen.<br><em>...</em>
-                    </p></div>
-                    <div class="c2"><p><a href="dokumente/2017.9.1_Camp_NL.pdf">weiterlesen</a></p></div>
-                    <div><img src="fotos/camp_nl.jpg" alt="camp"></div>
-
-                    <hr>
-
-                    <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> 20. Juni 2017: Start des transnationalen
-                        Leader-Projektes der GKA </h1>
-                        <div class="c2"><p>Seit dem 1. Juni sind die Vereine <em>Arc-Hab</em> aus Habay (B) und <em>D'Georges
-                            Kayser Altertumsfuerscher (GKA)</em> aus Nospelt "Europäische Partner" im gemeinsamen
-                            Projekt <em>Von einer Römervilla zur anderen im Treverergebiet</em>.<br><em>...</em></p>
-                        </div>
-                        <div class="c2"><p><a href="dokumente/2017.8_Leader_Start.pdf">weiterlesen</a></p></div>
-                    </h4>-->
                 </div>
                 <div id="top"><a href="#">nach oben</a></div>
             </div>
@@ -142,9 +88,9 @@
                 </div>
                 <div id="calendar">
                     <ul class="calendar">
-                        <li>20/10/2019 <br>Tag der offenen Tür im Ausgriewermusée</li>
+                        Programm 2020 erscheint demnächst.
                     </ul>
-                    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
+                    <!--<div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>-->
                 </div>
 
 
