--- a/museum.html
+++ b/museum.html
@@ -36,7 +36,7 @@
 <div class="break"></div>
 
   
-  <div class="title">Spezielle Veranstaltungen</div><div class="body1"><li>20/10/2019 - Tag der Offenen T&#252;r</li></ul></div>
+  <div class="title">Spezielle Veranstaltungen</div><div class="body1">Programm 2020 erscheint demnächst.</div>
   </div>
 <div id="top"><a href="#">nach oben</a></div>
  </div>
@@ -45,15 +45,15 @@
 <!-- rechts -->
  <div id="right">
 <!-- hier beginnt news-block -->
-  <div id="calendar-title">
-  <div class="title">:: Kalender</div>
-  </div>
-   <div id="calendar">
-       <ul class="calendar">
-                        <li>20/10/2019 <br>Tag der offenen Tür im Ausgriewermusée</li>
-       </ul>
-   <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
-  </div>
+                <div id="calendar-title">
+                    <div class="title">:: Kalender</div>
+                </div>
+                <div id="calendar">
+                    <ul class="calendar">
+                        Programm 2020 erscheint demnächst.
+                    </ul>
+                    <!--<div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>-->
+                </div>
 
   
 <!-- hier beginnt member-block -->
