--- a/villa.html
+++ b/villa.html
@@ -32,7 +32,10 @@
 <li>Die R&#246;mervilla kann zu jeder Zeit besichtigt werden. Informationstafeln vor Ort f&#252;hren den Besucher &#252;ber das Gel&#228;nde. Parkpl&#228;tze befinden sich unten an der Straße.</li><li>F&#252;r Gruppen und Schulklassen k&#246;nnen gef&#252;hrte Besichtigungen bei uns reserviert werden. Bitte melden Sie sich doch per <a href="kontakt.html#wie">E-Mail</a> oder <a href="kontakt.html#wie">Telefon</a>.</li></ul> </div>
 <div id="map"><iframe width="563" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=5.9437,49.6605,6.0276,49.6958&amp;layer=mapnik&amp;marker=49.67748,5.97897" style="border: 1px solid #f1b671"></iframe><br /><small><a href="http://www.openstreetmap.org/?lat=49.67815&amp;lon=5.98565&amp;zoom=14&amp;layers=M&amp;mlat=49.67748&amp;mlon=5.97897">Karte vergr&#246;ssern</a> | <a href="https://maps.google.com/maps?q=Ruines+Gallo-Romaines,+Koerich,+Luxembourg&hl=en&ll=49.677237,5.98875&spn=0.031325,0.104628&sll=49.67646,5.985918&sspn=0.015663,0.052314&oq=Ruines+Gallo-RomainesKoerich+Luxembourg&hq=Ruines+Gallo-Romaines,&hnear=Koerich,+Capellen,+Luxembourg&t=h&z=14">Google Maps</a></small></div>
 
-<div class="title">Spezielle Veranstaltungen</div><div class="body1"><ul class="c2"><li>16/09/2018 - Tag der Offenen T&#252;r</li></ul></div>
+<div class="title">Spezielle Veranstaltungen</div><div class="body1">
+Programm 2020 erscheint demnächst.
+<!--<ul class="c2"><li>16/09/2018 - Tag der Offenen T&#252;r</li></ul>-->
+</div>
 
 <div class="body2"><br><a name="miecher"><h3 class="c1">Etwas Geschichte ...</h3></a><h4><em>Miecher</em>, ein Ort an dem die R&#246;mer wohnten</h4>
 Dieser kleine Wald heißt "am Miecher".  Der Begriff kommt von dem lateinischen Wort <i>maceries</i>, das Tr&#252;mmerhaufen bedeutet. Etwa 300 m von hier liegt ein gallo-r&#246;mischer Gutshof, von dem heute nur noch die Grundmauern erhalten sind.<img class="gkayser" src="fotos/1_1964_s.jpg" alt="miecher">
@@ -53,15 +56,15 @@ Die hier im Wald aufgestellten Tafeln sollen Ihnen, liebe Besucher, die Lebensar
 <!-- rechts -->
   <div id="right">
 <!-- hier beginnt news-block -->
-  <div id="calendar-title">
-  <div class="title">:: Kalender</div>
-  </div>
-   <div id="calendar">
-       <ul class="calendar">
-                        <li>20/10/2019 <br>Tag der offenen Tür im Ausgriewermusée</li>
-       </ul>
-   <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
-  </div>
+                <div id="calendar-title">
+                    <div class="title">:: Kalender</div>
+                </div>
+                <div id="calendar">
+                    <ul class="calendar">
+                        Programm 2020 erscheint demnächst.
+                    </ul>
+                    <!--<div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>-->
+                </div>
 
   
 <!-- hier beginnt member-block -->
