--- a/kontakt.html
+++ b/kontakt.html
@@ -62,15 +62,15 @@
 <!-- rechts -->
  <div id="right">
 <!-- hier beginnt news-block -->
-  <div id="calendar-title">
-  <div class="title">:: Kalender</div>
-  </div>
-   <div id="calendar">
-    <ul class="calendar">
-                        <li>20/10/2019 <br>Tag der offenen Tür im Ausgriewermusée</li>
-    </ul>
-   <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
-  </div>
+                <div id="calendar-title">
+                    <div class="title">:: Kalender</div>
+                </div>
+                <div id="calendar">
+                    <ul class="calendar">
+                        Programm 2020 erscheint demnächst.
+                    </ul>
+                    <!--<div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>-->
+                </div>
   
 <!-- hier beginnt member-block -->
 
