add journal article

--- a/index.html
+++ b/index.html
@@ -68,12 +68,13 @@
                         <p class="cal">Einladung <a href="dokumente/2019.09_po_villa.pdf">PDF</a></p></div>
                     <div><a href="dokumente/2019.09_po_villa.pdf"><img src="fotos/2019.09_po_villa.jpg"></a></div>-->
                     
+                    <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> 31. Dezember 2019: 30 Jahre "D'Georges Kayser Altertumsfuerscher"  </h4>
+                    <div><a href="fotos/2019.12.31_journal.jpg"><img src="fotos/2019.12.31_journal_small.jpg" alt="artikel journal"></a></div>
+                    <br>
+                    
                     <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> 22. April 2019: 10.000er Besucher im <i>Ausgriewermusee</i> in Nospelt </h4>
                     <div><a href="fotos/2019. 5_10.000_visiteur.jpg"><img src="fotos/2019. 5_10.000_visiteur.png" alt="artikel lw"></a></div>
 
-                    <br>
-                   <h4 class="c1"><img src="css/grafiken/list_3.png" alt="*"> 12. März 2019: GKA leisteten 5 500 Stunden Freiwilligenarbeit (Luxemburger Wort) </h4>
-                    <div><a href="fotos/2019.3.12.lw.png"><img src="fotos/2019.3.12.lw_small.png" alt="artikel lw"></a></div>
                 </div>
                 <div id="top"><a href="#">nach oben</a></div>
             </div>
