--- a/kontakt.html
+++ b/kontakt.html
@@ -65,12 +65,14 @@
                 <div id="calendar-title">
                     <div class="title">:: Kalender</div>
                 </div>
-                <div id="calendar">
-                    <ul class="calendar">
-                        Programm 2020 erscheint demnächst.
-                    </ul>
-                    <!--<div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>-->
-                </div>
+   <div id="calendar">
+     <ul class="calendar">
+        <li>23/02/2020 <br>Generalversammlung</li><br>
+        <li>13/04/2020 <br>Keltische Handwerker im <i>Ausgriewermusée</i></li><br>
+        <li>23-29/08/2020 <br>Jugendlager</li>
+     </ul>
+   <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
+  </div>
   
 <!-- hier beginnt member-block -->
 
