--- a/camp.html
+++ b/camp.html
@@ -55,7 +55,7 @@ Geschlafen wird in Zelten im Wald <em>Miecher</em> nahe Goeblange, in dem sich a
 
 <div class="title"><a name="wer">Wer darf mitmachen?</a></div>
 <div class="body1"><ul class="c2"><li>Gruppe 1: Jugendliche von 12-13 Jahren </li><li>Gruppe 2: Jugendliche ab 14 Jahren</li><li>Erwachsene sind nat&#252;rlich auch Willkommen!</li><li>Wichtig! Der Teilnehmer oder ein Elternteil muss Mitglied der <em>Georges Kayser Altertumsfuerscher a.s.b.l.</em> sein.</li></ul></div>
-<div class="title"><a name="wann">Wann? Wo?</a></div><div class="body1"><ul class="c2"><li>03. August - 10. August 2019</li></div><div class="body1"><ul class="c2"><li>Goeblange <i>Miecher</i></li>
+<div class="title"><a name="wann">Wann? Wo?</a></div><div class="body1"><ul class="c2"><li>23. August - 29. August 2020</li></div><div class="body1"><ul class="c2"><li>tbd.</li>
 <!--<li>Anmeldeformular - <a href="camp_2013.pdf">PDF</a></li>--></ul></div>
 <div class="c3"><div class="c3-title"><img src="css/grafiken/list_3.png"> <a href="kontakt.html#mitgliedskarte"> Mitglied werden</a></div></div>
 
@@ -72,12 +72,14 @@ Geschlafen wird in Zelten im Wald <em>Miecher</em> nahe Goeblange, in dem sich a
                 <div id="calendar-title">
                     <div class="title">:: Kalender</div>
                 </div>
-                <div id="calendar">
-                    <ul class="calendar">
-                        Programm 2020 erscheint demnächst.
-                    </ul>
-                    <!--<div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>-->
-                </div>
+   <div id="calendar">
+     <ul class="calendar">
+        <li>23/02/2020 <br>Generalversammlung</li><br>
+        <li>13/04/2020 <br>Keltische Handwerker im <i>Ausgriewermusée</i></li><br>
+        <li>23-29/08/2020 <br>Jugendlager</li>
+     </ul>
+   <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
+  </div>
   
 <!-- hier beginnt member-block -->
 
