--- a/kalender.html
+++ b/kalender.html
@@ -30,16 +30,16 @@
   <div id="body"><div><h3 class="c1">Veranstaltungskalender</h3>
 <p>Hier finden Sie alle derzeit geplanten Veranstaltungen die von uns organisiert werden oder an welchen wir teilnehmen.</p>
 <div class="title">N&#228;chste Veranstaltung</div>
-      <div class="cal"><h4>20/10/2019 - <a href="camp.html">Tag der offenen Tür im Ausgriewermusée</a></h4>
+      <div class="cal"><h4>23/02/2020 - Generalversammlung</h4>
           <!-- <p class="cal"><a href="camp.html">Mehr dazu</a></p>-->
       </div>
-<div class="title">Veranstaltungskalender 2019</div><div class="body1">
+<div class="title">Veranstaltungskalender 2020</div><div class="body1">
   <ul class="c2">
-      <li>24/02/2019 - Generalversammlung in Nospelt</li>
-      <li>22/04/2019 - Emaischen</li>
-      <li>03-10/08/2019 - Jugendlager</li>
-      <li>15/09/2019 - Tag der offenen Tür Villa Goeblingen/Miecher</li>
-      <li>20/10/2019 - Tag der offenen Tür im <i>Ausgriewermusée</i></li>
+      <li>23/02/2020 - Generalversammlung</li>
+      <li>13/04/2020 - Keltische Handwerker im <i>Ausgriewermusée</i></li>
+      <li>23-29/08/2020 - Jugendlager</li>
+      <li>08/2020 - Internationales Grabungscamp</li>
+      <li>13/09/2019 - Tag der offenen Tür Villa Goeblingen/Miecher</li>
    </ul>
 </div>
 </div>
@@ -58,7 +58,9 @@
   </div>
    <div id="calendar">
      <ul class="calendar">
-                        <li>20/10/2019 <br>Tag der offenen Tür im Ausgriewermusée</li>
+        <li>23/02/2020 <br>Generalversammlung</li><br>
+        <li>13/04/2020 <br>Keltische Handwerker im <i>Ausgriewermusée</i></li><br>
+        <li>23-29/08/2020 <br>Jugendlager</li>
      </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
   </div>
