--- a/museum.html
+++ b/museum.html
@@ -29,14 +29,14 @@
  <div id="left"><img src="titlebar.png" alt="titlebar">
   <div id="body"><div class="body2"><h3 class="c1">"Ausgriewermusee"</h3>
 <p>Das <em>Ausgriewermusee</em> ist zusammen mit unserem Atelier im ehemaligen Pfarrhaus in Nospelt untergebracht. Hier werden Fundst&#252;cke von verschiedenen Grabungsstellen gezeigt. In einigen thematischen R&#228;umen kann die Arch&#228;ologie unserer Gegend entdeckt werden.<img class="gkayser" src="fotos/siege.png" alt="siege" > <br><br>Neben dem Ausstellungs- bereich befindet sich im Museum auch ein Konferenzraum in welchem Vortr&#228;ge gehalten werden und in welchem wir auch Gruppen und Schulklassen emfangen k&#246;nnen.</p><br></div><div>
-<div class="title">Öffnungszeiten</div><div class="body1">Das Museum ist derzeit nur auf Anfrage zu besuchen.</div>
+<div class="title">Öffnungszeiten</div><div class="body1"><ul class="c2"><li>07-08/2020: Mi-So von 13:00 Uhr - 18:00 Uhr</li></ul></div>
 
 </div>
 <div class="body2"><p><img class="gkayser1" src="fotos/museum_1.png" alt="museum"><br><br><br><br>...thematisch gestaltete R&#228;ume</p><div class="break"></div><img class="gkayser" src="fotos/museum_2.png" alt="museum"><p><br><br><br>...und Nachbildungen von Fundst&#228;tten laden zu einem spannenden Rundgang ein.</p></div>
 <div class="break"></div>
 
   
-  <div class="title">Spezielle Veranstaltungen</div><div class="body1">Programm 2020 erscheint demnächst.</div>
+  <div class="title">Spezielle Veranstaltungen</div><div class="body1"><ul class="c2"><li>13/04/2020 - Keltische Handwerker im <i>Ausgriewermusée</i></li></ul></div>
   </div>
 <div id="top"><a href="#">nach oben</a></div>
  </div>
@@ -48,12 +48,14 @@
                 <div id="calendar-title">
                     <div class="title">:: Kalender</div>
                 </div>
-                <div id="calendar">
-                    <ul class="calendar">
-                        Programm 2020 erscheint demnächst.
-                    </ul>
-                    <!--<div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>-->
-                </div>
+   <div id="calendar">
+     <ul class="calendar">
+        <li>23/02/2020 <br>Generalversammlung</li><br>
+        <li>13/04/2020 <br>Keltische Handwerker im <i>Ausgriewermusée</i></li><br>
+        <li>23-29/08/2020 <br>Jugendlager</li>
+     </ul>
+   <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
+  </div>
 
   
 <!-- hier beginnt member-block -->
