--- a/publikationen.html
+++ b/publikationen.html
@@ -37,7 +37,7 @@
 <img src="titlebar.png" alt="titlebar">
   <div id="body"><div class="c3">
 <h3 class="c1">"Den Ausgriewer"</h3>
-<a href="fotos/ausgriewer_1_large.png" rel="lightbox[Ausgriewer]"><img class="pub"  src="fotos/ausgriewer_1.png" alt="ausgriewer"></a>
+<a href="fotos/ausgriewer_large.png" rel="lightbox[Ausgriewer]"><img class="pub"  src="fotos/ausgriewer.png" alt="ausgriewer"></a>
 <p class="pub">"Den Ausgriewer" ist unsere j&#228;hrlich erscheinende Vereinszeitschrift. Sie enth&#228;lt Berichte und Fotos aller Aktivit&#228;ten des vergangenen Jahres. Anfang jeden Jahres erhalten unsere Mitglieder ein Exemplar zusammen mit ihrer neuen Mitgliedskarte. (Die Zeitschrift kann nur in Kombination mit einer Mitgliedskarte erworben werden.)</p></div>
 <!--<div class="title">aus dem Inhaltsverzeichnis</div><div class="body1"><ul class="c2"><li>Vorwort des Pr&#228;sidenten - Jacques Bonifas <a href="fotos/ausgriewer_4_large.png" rel="lightbox[Ausgriewer]">lesen</a></li><li>Camp 2012 - Lilli Gales <a href="fotos/ausgriewer_sait_31_small.png" rel="lightbox[Ausgriewer]">lesen 1 </a><a href="fotos/ausgriewer_sait_32_small.png" rel="lightbox[Ausgriewer]">2 </a><a href="fotos/ausgriewer_sait_33_small.png" rel="lightbox[Ausgriewer]">3 </a></li></ul></div>--><div class="c3">
 <div class="c3-title"><img src="css/grafiken/list_3.png"> <a href="kontakt.html#mitgliedskarte"> Mitglied werden</a></div>
@@ -57,9 +57,8 @@
                 </div>
    <div id="calendar">
      <ul class="calendar">
-        <li>23/02/2020 <br>Generalversammlung</li><br>
         <li>13/04/2020 <br>Keltische Handwerker im <i>Ausgriewermusée</i></li><br>
-        <li>23-29/08/2020 <br>Jugendlager</li>
+        <li>22-29/08/2020 <br>Jugendlager</li>
      </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
   </div>
