reorganize contact page

--- a/kontakt.html
+++ b/kontakt.html
@@ -29,30 +29,36 @@
 
 <!-- links -->
  <div id="left"><img src="titlebar.png" alt="titlebar">
-  <div id="summary"><a href="#wo">Adresse</a> | <a href="#wie">Telefon & E-Mail</a> | <a href="#Mitgliedskarte">Mitgliedskarte</a> | <a href="#verschiedenes">Verschiedenes</a></div>
+  <div id="summary"><a href="#wo">Adresse</a> | <a href="#wie">Telefon & E-Mail</a> | <a href="#mitgliedskarte">Mitgliedskarte</a> | <a href="#verschiedenes">Verschiedenes</a></div>
   <div id="body"><div><!--<h3 class="c1">Kontaktinformationen</h3>--></div>
-   <div class="title"><a name="wo">Wo Sie uns finden</a></div><div class="body1"><table><tr><td>D'Georges Kayser Altertumsfuerscher a.s.b.l.</td></tr>
+   <div class="title"><a name="wo">Adresse</a></div><div class="body1"><table><tr><td>D'Georges Kayser Altertumsfuerscher a.s.b.l.</td></tr>
 <tr><td>2, rue d'Olm</td></tr>
 <tr><td>L-8392 NOSPELT</td></tr>
 </table></div>
-<div class="body2"><img class="gkayser" src="fotos/siege.png" alt="siege"><p><br><i>Der Vereinsitz in Nospelt, hier ist auch das Museum untergebracht</i></p></div>
-<div id="map"><iframe width="563" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=5.99895,49.6624,6.04376,49.68134&amp;layer=mapnik&amp;marker=49.67387,6.00778" style="border: 1px solid #f1b671"></iframe><br /><small><a href="https://www.openstreetmap.org/?lat=49.67187&amp;lon=6.021355&amp;zoom=14&amp;layers=M&amp;mlat=49.67387&amp;mlon=6.00778">Karte vergr&#246;ssern</a> | <a href="https://goo.gl/maps/rVWQq">Google Maps</a></small></div>
-<div class="title"><a name="wie">Wie Sie uns erreichen</a></div>
+
+<div class="title"><a name="wie">Kontakt</a></div>
 <div class="body1">
 <table>
 <tr><td>Präsident: <em>Jacques BONIFAS</em></td></tr>
-<tr><td>Administratives Sekretariat: <em>Lucie ZAMBON<em></td></tr>
+<tr><td>Administratives Sekretariat: <em>Lucie ZAMBON</em></td></tr>
 <tr><td>E-Mail: <strong>gka@gka.lu</strong></td></tr>
 <tr><td>Telefon: 26 30 27 73</td></tr>
 
-</table></div><div class="c3"><div class="c3-title"><img src="css/grafiken/list_3.png"> Mitmachen</div><div class="c3-body">Sie m&#246;chten bei uns mitmachen? Dann melden Sie sich doch einfach per E-Mail oder Telefon!</div><div class="c3-title"><a name="mitgliedskarte"><img src="css/grafiken/list_3.png"></a>  Mitglied werden</div><div class="c3-body-member">Haben Sie bei uns ein Ihr neues Hobby gefunden oder m&#246;chten Sie unsere Arbeit einfach nur unterst&#252;tzen? Als Mitglied erhalten Sie eine Ausgabe unserer Vereinszeitschrift sowie regelm&#228;ssige Einladungen zu unseren Veranstaltungen. Sie m&#252;ssen lediglich die j&#228;hrliche Kotisation von 8 Euro auf eines unserer Bankkonten (siehe unten) &#252;berweisen.  </div></div>
-<div class="title"><a name="verschiedenes">Verschiedenes</a></div>
+</table></div>
+
+
+<div class="body2"><img class="gkayser" src="fotos/siege.png" alt="siege"><p><br><i>Der Vereinsitz in Nospelt, hier ist auch das Museum untergebracht</i></p></div>
+<div id="map"><iframe width="563" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=5.99895,49.6624,6.04376,49.68134&amp;layer=mapnik&amp;marker=49.67387,6.00778" style="border: 1px solid #f1b671"></iframe><br /><small><a href="https://www.openstreetmap.org/?lat=49.67187&amp;lon=6.021355&amp;zoom=14&amp;layers=M&amp;mlat=49.67387&amp;mlon=6.00778">Karte vergr&#246;ssern</a> | <a href="https://goo.gl/maps/rVWQq">Google Maps</a></small></div>
+
+
+<div class="c3"><div class="c3-title"><img src="css/grafiken/list_3.png"> Mitmachen</div><div class="c3-body">Sie m&#246;chten bei uns mitmachen? Dann melden Sie sich doch einfach per E-Mail oder Telefon!</div><div class="c3-title"><a name="mitgliedskarte"><img src="css/grafiken/list_3.png"></a>  Mitglied werden</div><div class="c3-body-member">Haben Sie bei uns ein Ihr neues Hobby gefunden oder m&#246;chten Sie unsere Arbeit einfach nur unterst&#252;tzen? Als Mitglied erhalten Sie eine Ausgabe unserer Vereinszeitschrift sowie regelm&#228;ssige Einladungen zu unseren Veranstaltungen. Sie m&#252;ssen lediglich die j&#228;hrliche Kotisation von 8 Euro auf eines unserer Bankkonten (siehe unten) &#252;berweisen.  </div></div>
+<div class="title"><a name="verschiedenes">Bankverbindungen</a></div>
 <div class="body1">
-<table><tr><td>Bankverbindungen: <br><strong>ING :</strong> LU20 0141 9546 1290 3000 | <strong>CCPL :</strong> LU63 1111 1208 1954 0000</tr>
+<table><tr><td><strong>ING :</strong> LU20 0141 9546 1290 3000 | <strong>CCPL :</strong> LU63 1111 1208 1954 0000</tr>
 
 </table></div>
 <div class="title">Webmaster</div>
-<div class="body1">Patrick Kahr (gka@kahrpatrick.me)</div>
+<div class="body1"><em>Patrick Kahr</em>: gka@kahrpatrick.me</div>
   </div>
 
  <div id="top"><a href="#">nach oben</a></div>
