--- a/museum.html
+++ b/museum.html
@@ -36,7 +36,7 @@
 <div class="break"></div>
 
   
-  <div class="title">Spezielle Veranstaltungen</div><div class="body1"><ul class="c2"><li>13/04/2020 - Keltische Handwerker im <i>Ausgriewermusée</i></li></ul></div>
+  <div class="title">Spezielle Veranstaltungen</div><div class="body1"><ul class="c2"><li><s>13/04/2020 - Keltische Handwerker im <i>Ausgriewermusée</i></s></li></ul></div>
   </div>
 <div id="top"><a href="#">nach oben</a></div>
  </div>
@@ -50,7 +50,7 @@
                 </div>
    <div id="calendar">
      <ul class="calendar">
-        <li>13/04/2020 <br>Keltische Handwerker im <i>Ausgriewermusée</i></li><br>
+        <li><s>13/04/2020 <br>Keltische Handwerker im <i>Ausgriewermusée</i></s></li><br>
         <li>22-29/08/2020 <br>Jugendlager</li>
      </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
