--- a/ueber_uns.html
+++ b/ueber_uns.html
@@ -71,7 +71,7 @@
                 </div>
    <div id="calendar">
      <ul class="calendar">
-        <li>13/04/2020 <br>Keltische Handwerker im <i>Ausgriewermusée</i></li><br>
+        <li><s>13/04/2020 <br>Keltische Handwerker im <i>Ausgriewermusée</i></s></li><br>
         <li>22-29/08/2020 <br>Jugendlager</li>
      </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
