--- a/villa.html
+++ b/villa.html
@@ -60,7 +60,7 @@ Die hier im Wald aufgestellten Tafeln sollen Ihnen, liebe Besucher, die Lebensar
                 </div>
    <div id="calendar">
      <ul class="calendar">
-        <li>13/04/2020 <br>Keltische Handwerker im <i>Ausgriewermusée</i></li><br>
+        <li><s>13/04/2020 <br>Keltische Handwerker im <i>Ausgriewermusée</i></s></li><br>
         <li>22-29/08/2020 <br>Jugendlager</li>
      </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
