--- a/kalender.html
+++ b/kalender.html
@@ -37,7 +37,7 @@
   <ul class="c2">
       <li>23/02/2020 - Generalversammlung</li>
       <li><s>13/04/2020 - Keltische Handwerker im <i>Ausgriewermusée</i></s></li>
-      <li>22-29/08/2020 - Jugendlager</li>
+      <li><s>22-29/08/2020 - Jugendlager</s></li>
       <li>08/2020 - Internationales Grabungscamp</li>
       <li>13/09/2019 - Tag der offenen Tür Villa Goeblingen/Miecher</li>
    </ul>
@@ -58,8 +58,7 @@
   </div>
    <div id="calendar">
      <ul class="calendar">
-        <li><s>13/04/2020 <br>Keltische Handwerker im <i>Ausgriewermusée</i></s></li><br>
-        <li>22-29/08/2020 <br>Jugendlager</li>
+        <li>(abgesagt) <s>22-29/08/2020 <br>Jugendlager</s></li>
      </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
   </div>
