--- a/kontakt.html
+++ b/kontakt.html
@@ -39,11 +39,10 @@
 <div class="title"><a name="wie">Kontakt</a></div>
 <div class="body1">
 <table>
-<tr><td>Präsident: <em>Jacques BONIFAS</em></td></tr>
-<tr><td>Administratives Sekretariat: <em>Lucie ZAMBON</em></td></tr>
 <tr><td>E-Mail: <strong>gka@gka.lu</strong></td></tr>
 <tr><td>Telefon: 26 30 27 73</td></tr>
-
+<tr><td>Präsident: <em>Jacques BONIFAS</em></td></tr>
+<tr><td>Administratives Sekretariat: <em>Lucie ZAMBON</em></td></tr>
 </table></div>
 
 
@@ -57,8 +56,8 @@
 <table><tr><td><strong>ING :</strong> LU20 0141 9546 1290 3000 | <strong>CCPL :</strong> LU63 1111 1208 1954 0000</tr>
 
 </table></div>
-<div class="title">Webmaster</div>
-<div class="body1"><em>Patrick Kahr</em>: gka@kahrpatrick.me</div>
+<div class="title">Technischer Kontakt </div>
+<div class="body1">Patrick Kahr: gka@kahrpatrick.me (Anliegen/Fragen betreffend Webseite)</div>
   </div>
 
  <div id="top"><a href="#">nach oben</a></div>
@@ -73,8 +72,7 @@
                 </div>
    <div id="calendar">
      <ul class="calendar">
-        <li><s>13/04/2020 <br>Keltische Handwerker im <i>Ausgriewermusée</i></s></li><br>
-        <li>22-29/08/2020 <br>Jugendlager</li>
+        <li>(abgesagt) <s>22-29/08/2020 <br>Jugendlager</s></li>
      </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
   </div>
