--- a/villa.html
+++ b/villa.html
@@ -60,8 +60,8 @@ Die hier im Wald aufgestellten Tafeln sollen Ihnen, liebe Besucher, die Lebensar
                 </div>
    <div id="calendar">
      <ul class="calendar">
-        <li><s>13/04/2020 <br>Keltische Handwerker im <i>Ausgriewermusée</i></s></li><br>
-        <li>22-29/08/2020 <br>Jugendlager</li>
+        <li>(abgesagt) <s>22-29/08/2020 <br>Jugendlager</s></li>
+
      </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
   </div>
