--- a/ueber_uns.html
+++ b/ueber_uns.html
@@ -71,8 +71,8 @@
                 </div>
    <div id="calendar">
      <ul class="calendar">
-        <li><s>13/04/2020 <br>Keltische Handwerker im <i>Ausgriewermusée</i></s></li><br>
-        <li>22-29/08/2020 <br>Jugendlager</li>
+        <li>(abgesagt) <s>22-29/08/2020 <br>Jugendlager</s></li>
+
      </ul>
    <div class="sidebar_link"><a href="kalender.html">weitere Veranstaltungen</a></div>
   </div>
