--- a/kontakt.html
+++ b/kontakt.html
@@ -88,16 +88,17 @@
  </div>
  <div id="sponsor-title"><div class="title">:: Wir werden unterst&#252;tzt von</div>
  </div>
- <div id="sponsor"><ul>
-	<li>Ministère de la Culture</li>
-	<li>Ministère de l'Éducation nationale, de l'Enfance et de la Jeunesse</li>
-	<li>Ministère de l'Économie</li>
-	<li>Commune de Kehlen </li>
-	<li>Commune de Koerich </li>
-	<li>Commune de Mamer </li>
-	<li>Service National de la Jeunesse </li>
-	<li>Centre National de la Recherche Archéologique</li>
-     </ul>
+ <div id="sponsor">                    <ul>
+                        <li>Ministère de la Culture</li>
+                        <li>Ministère du Tourisme</li>
+                        <li>Ministère de l'Agriculture</li>
+                        <li>Commune de Kehlen</li>
+                        <li>Commune de Koerich</li>
+                        <li>Commune de Mamer</li>
+                        <li>Service national de la jeunesse (SNJ)</li>
+                        <li>Centre national de la recherche archéologique (CNRA)</li>
+                        <li>Musée national d'histoire et d'art (MNHA)</li>
+                    </ul>
  </div>
 <!--<div><center><a href="ing.html"><img src="ing.jpg"></a></center></div>-->
  </div>
